--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </p>
 
     <footer>
-      Contact us: passionpetproject@gmail.com
+      Contact us: neylan.vily@gmail.com
     </footer>
   </div>
 </body>
