--- a/index.html
+++ b/index.html
@@ -6,42 +6,105 @@
   <title>The Passion Pet Project</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #fffaf4;
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background-color: #b3e6ff;
       color: #333;
-      margin: 40px;
+    }
+
+    header {
+      background-color: #f7b2d9;
+      padding: 30px 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+      color: #ff2f92;
+    }
+
+    .section {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .section h2 {
+      color: #ff2f92;
+      font-size: 1.8em;
+    }
+
+    .section p {
+      font-size: 1.1em;
       line-height: 1.6;
     }
-    h1 {
-      color: #b9655d;
-      font-size: 2.5em;
+
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
     }
-    .container {
-      max-width: 800px;
-      margin: auto;
+
+    .gallery img {
+      width: 260px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
+
     footer {
-      margin-top: 40px;
+      text-align: center;
+      padding: 30px 20px;
       font-size: 0.9em;
-      color: #777;
+      color: #444;
+    }
+
+    a {
+      color: #ff2f92;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+
+  <header>
     <h1>The Passion Pet Project</h1>
-    <p>
-      The Passion Pet Project is a youth-led campaign dedicated to supporting local animal rescues and shelters in need. 
-      Through creative fundraisers and community outreach, we work to provide food, supplies, and support to help dogs and cats find safe, loving homes.
-    </p>
+  </header>
 
+  <div class="section">
+    <h2>Who Are We?</h2>
     <p>
-      Our mission is to inspire compassion, raise awareness, and take action—one paw at a time.
+      The Passion Pet Project is a local, teen-led nonprofit that collects extra pet necessities (like leashes, collars, bedding, toys, food, and grooming supplies) to donate to county shelters.
     </p>
-
-    <footer>
-      Contact us: neylan.vily@gmail.com
-    </footer>
+    <p>
+      Our mission is to help pets in shelters feel more comfortable. Every pet deserves love—and every small act of care can make a big difference.
+    </p>
   </div>
+
+  <div class="section">
+    <h2>Our Why</h2>
+    <p>
+      The Passion Pet Project was founded by 16-year-old Neylan Vily to bring comfort to pets living in difficult shelter conditions. Inspired by the rescue stories of our own adopted animals, we know we can’t save them all, but we believe every small act of care makes a big difference.
+    </p>
+  </div>
+
+  <div class="section">
+    <h2>Our Rescue Pets</h2>
+    <div class="gallery">
+      <img src="images/cat1.jpg" alt="Rescue Cat" />
+      <img src="images/cat2.jpg" alt="Rescue Cat" />
+      <img src="images/cat3.jpg" alt="Rescue Cat" />
+      <img src="images/dog1.jpg" alt="Rescue Dog" />
+      <img src="images/dog2.jpg" alt="Rescue Dog" />
+      <img src="images/dog3.jpg" alt="Rescue Dog" />
+      <img src="images/dog4.jpg" alt="Rescue Dog" />
+      <img src="images/dog5.jpg" alt="Rescue Dog" />
+    </div>
+  </div>
+
+  <footer>
+    For more information, email: <a href="mailto:neylan.vily@gmail.com">neylan.vily@gmail.com</a>
+  </footer>
+
 </body>
 </html>
